--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "extent",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://JustInToCoding.github.io/extent",
   "dependencies": {
     "concaveman": "^1.1.1",
+    "gh-pages": "^2.1.1",
     "leaflet": "^1.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -12,6 +14,8 @@
     "shpjs": "^3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
